[package]
name = "sherpax-cli"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.0"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
sp-core = { package = "sp-core", git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
structopt = "0.3.25"
subxt = { git = "https://github.com/paritytech/subxt", rev = "5db9b73899edc8500aa141f67a6a0b545486c884" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch."https://github.com/paritytech/substrate"]
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-panic-handler = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-version-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-version = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
